@@ -63,7 +63,7 @@
   <message msgid="basic ht extension channel" msgstr="Дополнительный канал" />
   <message msgid="basic ht amsdu" msgstr="Агрегация MSDU" />
   <message msgid="basic ht addba" msgstr="Агрегация ACK" />
-  <message msgid="basic ht delba" msgstr="Отклонять запрос BA" />
+  <message msgid="basic ht delba" msgstr="Отклонять запрос агрегации ACK" />
   <message msgid="basic other" msgstr="Прочее" />
   <message msgid="basic ht txstream" msgstr="HT TxStream" />
   <message msgid="basic ht rxstream" msgstr="HT RxStream" />
