@@ -105,7 +105,7 @@ fwAlgRTSP=0
 HideSSID=0
 HiPower=0
 HostName=Wive-NG-MT
-FixedTxMode=HT
+FixedTxMode=
 HT_40MHZ_INTOLERANT=0
 HT_AMSDU=1
 HT_AutoBA=1
@@ -389,8 +389,8 @@ ChannelINIC=48
 HT_TxStreamINIC=1
 HT_RxStreamINIC=1
 HT_EXTCHAINIC=1
-SSID1INIC=Wive-NG-MT-5GHz
-FixedTxModeINIC=VHT
+SSID1INIC=Wive-NG-MT-5GHZ
+FixedTxModeINIC=
 WAN_MAC_ADDR=00:0C:43:30:52:62
 LAN_MAC_ADDR=00:0C:43:30:52:64
 WLAN_MAC_ADDR=00:0C:43:30:52:66
