@@ -516,6 +516,7 @@
 6) kernel: pci: fix P2P bridge I/O port window sign extension.<br>
 7) kernel: pci/portdrv: Remove warning about invalid IRQ for hot-added PCIe ports.<br>
 8) dropbear: up to 2015.67 version.<br>
+9) goahead: do not set FixedTxMode if MCS not limited/auto.<br>
 <br>
 <br>
 <b>TODO:</b><br>
